# finetuning-energy

./: .gitignore  Makefile  README.md  example_text_preprocessing.py  finetuning.py  main.py  make.bat  monitor.py  pyproject.toml  pytest.ini  test_manual.py
.github/workflows/: ci.yml
config/: config.py  settings.toml
data/: dataset.xlsx  dataset_tokens.csv
docs/: ENERGY_MONITORING_ENHANCED.md  PIPELINE_INTEGRADO.md  SOLUCAO_IMPLEMENTADA.md  TEXT_PREPROCESSING_ADVANCED.md
examples/: energy_monitoring_examples.py
src/: energy_callback.py  finetuning.py  logging_config.py  monitor.py  text_preprocessing.py  text_preprocessing_advanced.py  utils.py  warning_filters.py
src/utils/: __init__.py  common.py  gpu_strategies.py
tests/: conftest.py  pipelinetest.py  simpletest.py  test_config.py  test_config_setup.py  test_dataset.py  test_early_stopping.py  test_energy_monitoring.py  test_energy_monitoring_enhanced.py  test_finetuning.py  test_integration.py  test_monitor.py  test_text_preprocessing.py  test_text_preprocessing_advanced.py  test_text_preprocessing_validation.py  test_training_setup.py
