[project]
name = "finetuning-energy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "bitsandbytes>=0.46.1",
    "codecarbon>=3.0.3",
    "datasets>=4.0.0",
    "dynaconf>=3.2.11",
    "gpustat>=1.1.1",
    "huggingface-hub>=0.33.4",
    "nvitop>=1.5.1",
    "peft>=0.16.0",
    "pynvml>=12.0.0",
    "python-dotenv>=1.1.1",
    "transformers>=4.53.2",
    "trl>=0.19.1",
    "wandb>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
